assets/css/main.css
body {
        color: white;
        font-family: sans-serif;
        line-height: 1.5;
        padding: 0rem;
        margin: 0;
        font-size: 0.8em;
        background-color: #212733;
}

header {
        display: grid;
        grid-template-columns: 10% 13% 1% auto;
        border-bottom: 3pt solid #5f6361;
        margin-bottom: 0rem;
        padding: 0rem;
        line-height: 0;
        position: fixed;
        top: 0;
        left: 0;
        right: 0;
        background-color: #282c34;
        z-index: 999;
        font-size: 0.8em;
}

header #notebook {
        padding: 0.4rem;
        margin-left: 1rem;
        margin-top: 0.4rem;
        cursor: pointer;
}

header .menu {
        padding: 0.4rem;
        margin-top: 0.4rem;
}

header ul {
        padding: 0;
}

header ul > li {
        display: inline-block;
        list-style: none;
        margin-left: 2rem;
        padding-top: 0.3rem;
        font-size: 1.3em;
        font-weight: bold;
}

footer {
        background-color: #282c34;
        position: fixed;
        bottom: 0;
        left: 0;
        right: 0;
        padding-left: 1rem;
        font-size: .6em;
        border-top: 3pt solid #5f6361;
}

#page {
        display: grid;
        grid-template-columns: 23% 1% 76%;
        justify-content: center;
        align-content: center;
        margin-top: 1rem;
}

#sidebar {
        background-color: #1d2128;
        padding-top: 2rem;
        height: 100%;
        min-height: 100vh;
        font-size: 1.2em;
}

#nav {
        min-height: max-content;
        height: 100%;
        position: fixed;
        left: 0;
        top: 0;
        overflow-x: hidden;
        overflow-y: scroll;
        width: 23%;
        margin-top: 3rem;
}

#content {
        width: 90%;
        margin: 2rem;
        height: 100%;
        min-height: 100vh;
        font-size: 1.2em;
}

#content h1 {
        font-size: 1.6rem;
}

#content h2 {
        font-size: 1.2rem;
}

.taxonomy {
        padding: .5rem;
        display: inline;
}

.taxonomy-list {
        padding: 1rem;
        list-style: none;
}

#content img {
        width: 50%;
}

li.collapse {
        list-style-type: none;
        cursor: pointer;
}

li.collapse:before {
        content: "+";
}

li.collapse.open:before {
        content: "-";
}

.nav-section {
        display: flex;
        flex-direction: row;
        position: relative;
}

.nav-section > a {
        position: absolute;
        margin-left: 1rem;
}

li.collapse > ul {
        display: flex;
        flex-direction: column;
        list-style-type: circle;
        visibility: collapse;
        opacity: 0;
        transition: opacity 0.3s, visibility 0.1s linear;
}

li.collapse.open > ul {
        visibility: visible;
        opacity: 1;
}

blockquote {
        border-left: .3rem solid #27c25b;
        margin: 1em 0em;
        padding: .5em 1em;
        background-color: #20252b;
        color: white;
        font-size: 1.0em;
}

table {
        background-color: #242930;
}

table thead {
        color: green;
        background-color: #1a1f24;
}

/*** sidebar ***/
div#delimiter {
        width: 3pt;
        background-color: #5f6361;
        cursor: col-resize;
}

div#delimiter:hover {
        background-color: #727372;
}

.breadcrumbs {
        color: #99a1ff;
        padding: 1rem;
        line-height: 1.5em;
        font-size: 1.2em;
        display: flex;
        flex-direction: row;
        align-content: center;
        /* border-bottom: 4pt solid #5f6361; */
        width: 100%;
}

.breadcrumbs > a {
        margin-right: 0.6rem;
        margin-left: 0.6rem;
        font-weight: bold;
}

.top-tags {
        padding: 1rem;
}

.top-tags .list-tags {
        list-style: none;
        display: inline;
        padding-bottom: 2rem;
        border-bottom: 3pt solid #5f6361;
}

/* Code blocks */
code {
        /* will target single backtick */
        color: green;
        font-size: 1.4em;
}

/* will target tripple backtick */
div.highlight {
        position: relative;
        overflow: scroll;
        font-size: 0.8em;
}

div.highlight > pre {
        background-color: #191c22 !important;
        width: max-content;
        min-width: 100%;
        padding: 1rem;
        padding-top: 2rem;
}

div.highlight > span.btn-copy {
        position: absolute;
        top: 0;
        right: 0;
        transform: translate(-1rem, 1rem);
        visibility: hidden;
        color: white;
}

div.highlight:hover > span.btn-copy {
        visibility: visible;
}

a {
        color: #16b6c4;
        text-decoration: none;
}

a:hover {
        color: #27c25b;
}

#sidebar.close {
        display: none;
}

#fixed-totop-button {
        position: fixed;
        bottom: 0px;
        right: 0px;
        margin-right: 1rem;
        margin-bottom: 3rem;
        padding: 1rem;
        padding-right: 1.2rem;
        border-radius: 50%;
        border: 2px solid #16b6c4;
        color: #16b6c4;
        background-color: #1d2128;
        cursor: pointer;
}

#fixed-totop-button:hover {
        color: #27c25b;
        border: 2px solid #27c25b;
}

/* ============ Media Queries (Small Devices) ================== */
@media (max-width: 1280px) {

}

@media (max-width: 1024px) {

        header {
                grid-template-columns: 10% 16% 1% auto;
        }

}

@media (max-width: 768px) {

        header {
                grid-template-columns: 10% 26% 1% auto;
        }

        header .menu {
                padding: 0.4rem;
                margin-left: 2rem;
        }

        #sidebar {
                display: none;
        }

        #page div#delimiter {
                display: none;
        }

}

@media (max-width: 480px) {

        header {
                display: grid;
                grid-template-columns: 10% auto;
                padding: 0rem;
                font-size: 0.6em;
        }

        header > .breadcrumbs {
                padding: 0.4rem;
                padding-bottom: 0.5rem;
        }

        header .menu {
                padding-left: 4rem;
        }

        #page {
                display: flex;
                flex-direction: row;
                justify-content: center;
                align-content: center;
                margin-top: 2rem;
                padding: 1rem;
                font-size: 1.0em;
        }

        #content {
                width: 100%;
                margin: 1rem;
                font-size: 1em;
        }

        #sidebar {
                display: none;
        }

        div#delimiter {
                display: none;
        }

        blockquote {
                border-left: .3rem solid #27c25b;
                margin: 1em 0em;
                padding: .3em 1em;
                background-color: #20252b;
                color: white;
                font-size: 0.9em;
        }

        div.highlight {
                font-size: 0.7em;
        }

        code {
                /* will target single backtick */
                font-size: 1.3em;
        }

        footer {
                font-size: 0.4em;
        }

        #content img {
                width: 100%;
        }

}

